tests/lime/pass/bugs/args/push_macro.wsa
push 1
push macro hello [push 3] 2
hello
