tests/lime/fail/tokens/macro_first/byte_57.wsa
macro 9 [push 57] 9
